--- a/styles/map-top.less
+++ b/styles/map-top.less
@@ -11,6 +11,21 @@
     background-size: contain;
     background-position: center center;
     background-repeat: no-repeat;
+
+    .places {
+      list-style: none;
+
+      li {
+        content: ' ';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 10px;
+        height: 10px;
+        background-color: red;
+        border-radius: 50%;
+      }
+    }
   }
 
   .map-arrow {
@@ -25,6 +40,7 @@
     color: #ffffff;
     text-align: center;
     cursor: pointer;
+    border-radius: 0 0 10px 10px;
     .transition(bottom .5s);
 
     .fa {
@@ -33,7 +49,7 @@
   }
 
   &.loaded .map-arrow {
-    bottom: (-1 * (@aside-top-arrow-size + 2 * @aside-top-arrow-padding-vertical));
+    bottom: (-1 * (@aside-top-arrow-size + 2 * @aside-top-arrow-padding-vertical) + 2px);
   }
 }
 
