--- a/templates/maps.hbs
+++ b/templates/maps.hbs
@@ -1,18 +1,26 @@
 <div class="current-map">
-  <img class="map" src="{{current.image}}"/>
-  <div data-name="greenwich" class="longitude longitude-greenwich"></div>
-  <div data-name="alaska" class="longitude longitude-alaska"></div>
-  <div data-name="siberia" class="longitude longitude-siberia"></div>
-  <div data-name="equator" class="latitude latitude-equator"></div>
-  <div data-name="greenland" class="latitude latitude-greenland"></div>
-  <div data-name="chili" class="latitude latitude-chili"></div>
+  <img class="map" src="{{current.image.url}}"/>
+  {{#each coordinates}}
+    {{#if withInput}}
+    <div data-name="{{name}}" class="{{type}} {{type}}-{{name}}"></div>
+    {{/if}}
+  {{/each}}
 </div>
 
-<ul class="current-values">
-  <li><span>Greenwich:</span><input class="value value-greenwich"/></li>
-  <li><span>Alaska:</span><input class="value value-alaska"/></li>
-  <li><span>Siberia:</span><input class="value value-siberia"/></li>
-  <li><span>Equator:</span><input class="value value-equator"/></li>
-  <li><span>Greenland:</span><input class="value value-greenland"/></li>
-  <li><span>Chili:</span><input class="value value-chili"/></li>
-</ul>
+<div class="current-values">
+  <ul>
+    {{#each coordinates}}
+      {{#if withInput}}{{#if isLatitude}}
+      <li><span>{{name}}:</span><input class="value value-{{name}}"/></li>
+      {{/if}}{{/if}}
+    {{/each}}
+  </ul>
+
+  <ul>
+    {{#each coordinates}}
+      {{#if withInput}}{{#if isLongitude}}
+      <li><span>{{name}}:</span><input class="value value-{{name}}"/></li>
+      {{/if}}{{/if}}
+    {{/each}}
+  </ul>
+</div>
