--- a/styles/global.less
+++ b/styles/global.less
@@ -37,16 +37,16 @@ body {
   left: 15%;
 }
 
-#mask-right-bis {
+#mask-feedback {
   z-index: 3000;
 }
 
-#aside-right-bis {
+#aside-feedback {
   z-index: 3001;
   left: 30%;
 }
 
-#mask-right, #mask-right-bis, #mask-top {
+#mask-right, #mask-feedback, #mask-top {
   .cover-mask();
   display: none;
   background-color: #000000;
@@ -54,13 +54,13 @@ body {
   .transition(opacity 500ms ease);
 }
 
-#aside-right, #aside-right-bis, #aside-top {
+#aside-right, #aside-feedback, #aside-top {
   display: block;
   position: absolute;
   .transition-transform(250ms ease);
 }
 
-#aside-right, #aside-right-bis {
+#aside-right, #aside-feedback {
   background-color: #ffffff;
   top: 0;
   bottom: 0;
@@ -87,13 +87,13 @@ body {
   }
 }
 
-.aside-right-bis-open {
-  #mask-right-bis {
+.aside-feedback-open {
+  #mask-feedback {
     display: block;
     opacity: .5;
   }
 
-  #aside-right-bis {
+  #aside-feedback {
     .translate3d(0, 0, 0);
   }
 }
@@ -122,5 +122,18 @@ body {
 
 .main-title {
   font-size: 3rem;
-  margin-left: 10%;
+  margin: 50px auto;
+  width: 70%;
+  max-width: 600px;
+
+  position: relative;
+  left: 0;
+  opacity: 1;
+  .translate3d(-15%, 0, 0);
+  .transition(left 1s, opacity 1s;);
+
+  &:hover {
+    left: 100px;
+    opacity: 0;
+  }
 }
