More features and mocks

--- a/styles/app.less
+++ b/styles/app.less
@@ -7,6 +7,8 @@
 @fa-font-path: "./fonts";
 
 @import "global";
+@import "aside";
+@import "type";
 @import "buttons";
 @import "feedback";
 @import "home";
