--- a/templates/article.hbs
+++ b/templates/article.hbs
@@ -1,7 +1,7 @@
 <div class="illustration" style="background-image:url('{{illustration.main.url}}')"></div>
 
 <div class="article">
-  <div class="content">
+  <div class="article-content">
     {{{title}}}
     {{{content}}}
   </div>
