--- a/styles/global.less
+++ b/styles/global.less
@@ -19,3 +19,30 @@ html, body, #content {
 body {
   font-family: 'Lato', 'sans-serif';
 }
+
+.content {
+  width: 100%;
+  height: 100%;
+}
+
+.main-title {
+  font-size: 3rem;
+  margin: 50px auto;
+  width: 70%;
+  max-width: 600px;
+
+  position: relative;
+  left: 0;
+  opacity: 1;
+  .translate3d(-15%, 0, 0);
+  .transition(left 1s, opacity 1s;);
+
+  &:hover {
+    left: 100px;
+    opacity: 0;
+  }
+}
+
+.fullscreen .main-title {
+  display: none;
+}
