--- a/templates/home.hbs
+++ b/templates/home.hbs
@@ -3,10 +3,10 @@
   <h1 class="main-title">Farewell...</h1>
 
   {{#each articles}}
-    <div id="{{reference.type}}-{{reference.id}}" class="article-summary">
-      <div class="illustration" style="background-image:url('{{illustration.main.url}}')"></div>
-      <div class="summary"{{#if colors}} style="border-color:{{colors.primary}};"{{/if}}>
-        <h1>{{{title}}}</h1>
+    <div id="{{reference.type}}-{{reference.id}}" class="article-summary {{classes}}"{{#if style}} style="{{style}}"{{/if}}>
+      <div class="illustration" style="{{illustrationStyle}}')"></div>
+      <div class="summary" style="{{summaryStyle}}">
+        {{{title}}}
         <div class="description">
           {{{descriptions.long}}}
           <button type="button" class="btn" data-article-id="{{reference.id}}"{{#if colors}} style="background-color:{{colors.lighten}};border-color:{{colors.primary}};"{{/if}}>Show</button>
