--- a/styles/global.less
+++ b/styles/global.less
@@ -8,7 +8,7 @@
   width: device-width;
 }
 
-html, body, #content {
+html, body {
   width: 100%;
   height: 100%;
   margin: 0;
@@ -22,6 +22,9 @@ body {
 
 .content {
   width: 100%;
+}
+
+.desktop .content {
   height: 100%;
 }
 
