--- a/styles/map-top.less
+++ b/styles/map-top.less
@@ -54,6 +54,14 @@
   }
 }
 
+.mobile .map-arrow .map-arrow-label {
+  display: none;
+}
+
+.desktop .map-arrow .fa::before {
+  content: '\f13a';
+}
+
 .aside-top-open #aside-top .map-arrow .fa {
   .rotate(180deg);
 }
