--- a/templates/map.hbs
+++ b/templates/map.hbs
@@ -7,5 +7,5 @@
 </div>
 
 <div class="map-arrow" style="background-color:{{map.bgColor}};">
-  <span class="fa fa-chevron-circle-down"></span> {{i18n 'global.world.map'}}
+  <span class="fa fa-map-marker"></span><span class="map-arrow-label"> {{i18n 'global.world.map'}}</span>
 </div>
