--- a/styles/articles.less
+++ b/styles/articles.less
@@ -51,12 +51,12 @@
   }
 }
 
-.mobile .article .article-content {
+.iscroll .article .article-content {
   padding-bottom: 500px;
   padding-bottom: 50vh;
 }
 
-.desktop .article .article-content {
+.no-iscroll .article .article-content {
   padding: 30px 30px 75px 30px;
 }
 
