--- a/styles/global.less
+++ b/styles/global.less
@@ -20,6 +20,10 @@ body {
   font-family: 'Lato', 'sans-serif';
 }
 
+#content {
+  -webkit-overflow-scrolling: touch;
+}
+
 .content {
   width: 100%;
 }
