Use url to synch everything

--- a/styles/app.less
+++ b/styles/app.less
@@ -7,6 +7,7 @@
 @import "font-awesome/less/font-awesome";
 @fa-font-path: "./fonts";
 
+@import "colors";
 @import "global";
 @import "aside";
 @import "type";
@@ -18,3 +19,4 @@
 @import "map-top";
 @import "maps";
 @import "iscroll";
+@import "spinner";
