--- a/styles/articles.less
+++ b/styles/articles.less
@@ -19,7 +19,7 @@
   .iscroll-wrapper();
   width: 100%;
   height: 100%;
-  padding: 5%;
+  padding: 2%;
   overflow-x: hidden;
   overflow-y: auto;
 
@@ -48,6 +48,21 @@
     margin: 0 auto;
     padding: 10% 10% 75px 10%;
     border-radius: 10px 10px 0 0;
+
+    p {
+      text-align: justify;
+    }
+
+    a[data-lightbox] {
+      display: block;
+      margin: 1rem 0;
+    }
+
+    img {
+      max-width: 100%;
+      display: block;
+      margin: 0 auto;
+    }
   }
 }
 
@@ -57,7 +72,17 @@
 }
 
 .no-iscroll .article .article-content {
-  padding: 30px 30px 75px 30px;
+  padding: 20px 20px 85px 20px;
+}
+
+@media (min-width: @screen-md-min) {
+  .article {
+    padding: 5%;
+  }
+
+  .no-iscroll .article .article-content {
+    padding: 30px 30px 85px 30px;
+  }
 }
 
 .fullscreen .article-summary {
@@ -138,8 +163,8 @@
     }
   }
 
-  &.color-seance { .article-color(#9A12B3); }
-  &.color-thunderbird { .article-color(#9B59B6); }
+  &.color-seance { .article-color('color-seance'); }
+  &.color-thunderbird { .article-color('color-thunderbird'); }
 }
 
 .zigzag .article-summary {
