--- a/styles/articles.less
+++ b/styles/articles.less
@@ -163,8 +163,58 @@
     }
   }
 
+  &.color-plum { .article-color('color-plum'); }
   &.color-seance { .article-color('color-seance'); }
+  &.color-studio { .article-color('color-studio'); }
+  &.color-wisteria { .article-color('color-wisteria'); }
+  &.color-pomegranate { .article-color('color-pomegranate'); }
+  &.color-sunglo { .article-color('color-sunglo'); }
   &.color-thunderbird { .article-color('color-thunderbird'); }
+  &.color-oldbrick { .article-color('color-oldbrick'); }
+  &.color-flamingo { .article-color('color-flamingo'); }
+  &.color-valencia { .article-color('color-valencia'); }
+  &.color-tallpoppy { .article-color('color-tallpoppy'); }
+  &.color-monza { .article-color('color-monza'); }
+  &.color-cinnabar { .article-color('color-cinnabar'); }
+  &.color-tahitigold { .article-color('color-tahitigold'); }
+  &.color-casablanca { .article-color('color-casablanca'); }
+  &.color-crusta { .article-color('color-crusta'); }
+  &.color-burntorange { .article-color('color-burntorange'); }
+  &.color-buttercup { .article-color('color-buttercup'); }
+  &.color-ecstasy { .article-color('color-ecstasy'); }
+  &.color-jaffa { .article-color('color-jaffa'); }
+  &.color-zest { .article-color('color-zest'); }
+  &.color-firebush { .article-color('color-firebush'); }
+  &.color-downy { .article-color('color-downy'); }
+  &.color-mountainmeadowlight { .article-color('color-mountainmeadowlight'); }
+  &.color-lightgreensea { .article-color('color-lightgreensea'); }
+  &.color-turquoise { .article-color('color-turquoise'); }
+  &.color-observatory { .article-color('color-observatory'); }
+  &.color-shamrock { .article-color('color-shamrock'); }
+  &.color-mountainmeadow { .article-color('color-mountainmeadow'); }
+  &.color-emeral { .article-color('color-emeral'); }
+  &.color-greenhaze { .article-color('color-greenhaze'); }
+  &.color-junglegreen { .article-color('color-junglegreen'); }
+  &.color-freespeechaquamarine { .article-color('color-freespeechaquamarine'); }
+  &.color-jade { .article-color('color-jade'); }
+  &.color-salem { .article-color('color-salem'); }
+  &.color-eucalyptus { .article-color('color-eucalyptus'); }
+  &.color-pictonblue { .article-color('color-pictonblue'); }
+  &.color-shakespeare { .article-color('color-shakespeare'); }
+  &.color-curiousblue { .article-color('color-curiousblue'); }
+  &.color-madison { .article-color('color-madison'); }
+  &.color-jordyblue { .article-color('color-jordyblue'); }
+  &.color-dodgerblue { .article-color('color-dodgerblue'); }
+  &.color-ming { .article-color('color-ming'); }
+  &.color-ebonyclay { .article-color('color-ebonyclay'); }
+  &.color-malibu { .article-color('color-malibu'); }
+  &.color-chambray { .article-color('color-chambray'); }
+  &.color-pickledbluewood { .article-color('color-pickledbluewood'); }
+  &.color-hoki { .article-color('color-hoki'); }
+  &.color-jellybean { .article-color('color-jellybean'); }
+  &.color-jacksonpurple { .article-color('color-jacksonpurple'); }
+  &.color-steelblue { .article-color('color-steelblue'); }
+  &.color-fountainblue { .article-color('color-fountainblue'); }
 }
 
 .zigzag .article-summary {
