--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,15 +1,117 @@
 // PURPLE
+@color-plum: #913D88;
 @color-seance: #9A12B3;
+@color-studio: #8E44AD;
+@color-wisteria: #9B59B6;
 
-// BLUE
-@color-thunderbird: #9B59B6;
+// RED
+@color-pomegranate: #F22613;
+@color-sunglo: #E26A6A;
+@color-thunderbird: #D91E18;
+@color-oldbrick: #96281B;
+@color-flamingo: #EF4836;
+@color-valencia: #D64541;
+@color-tallpoppy: #C0392B;
+@color-monza: #CF000F;
+@color-cinnabar: #E74C3C;
+
+// ORANGE
+@color-tahitigold: #E87E04;
+@color-casablanca: #F4B350;
+@color-crusta: #F2784B;
+@color-burntorange: #D35400;
+@color-buttercup: #F39C12;
+@color-ecstasy: #F9690E;
+@color-jaffa: #F27935;
+@color-zest: #E67E22;
+@color-firebush: #EB9532;
 
 // GREEN
+@color-downy: #65C6BB;
+@color-mountainmeadowlight: #1BBC9B;
+@color-lightgreensea: #1BA39C;
+@color-turquoise: #36D7B7;
+@color-observatory: #049372;
+@color-shamrock: #2ECC71;
+@color-mountainmeadow: #16A085;
+@color-emeral: #3FC380;
+@color-greenhaze: #019875;
+@color-junglegreen: #26C281;
+@color-freespeechaquamarine: #03A678;
 @color-jade: #00B16A;
+@color-salem: #1E824C;
+@color-eucalyptus: #26A65B;
 
-.color-seance { background-color: @color-seance; };
-.color-thunderbird { background-color: @color-thunderbird; };
-.color-jade { background-color: @color-jade; };
+// BLUE
+@color-pictonblue: #59ABE3;
+@color-shakespeare: #52B3D9;
+@color-curiousblue: #3498DB;
+@color-madison: #2C3E50;
+@color-jordyblue: #89C4F4;
+@color-dodgerblue: #19B5FE;
+@color-ming: #336E7B;
+@color-ebonyclay: #22313F;
+@color-malibu: #6BB9F0;
+@color-chambray: #3A539B;
+@color-pickledbluewood: #34495E;
+@color-hoki: #67809F;
+@color-jellybean: #2574A9;
+@color-jacksonpurple: #1F3A93;
+@color-steelblue: #4B77BE;
+@color-fountainblue: #5C97BF;
+
+.color-plum { background-color: @color-plum; }
+.color-seance { background-color: @color-seance; }
+.color-studio { background-color: @color-studio; }
+.color-wisteria { background-color: @color-wisteria; }
+.color-pomegranate { background-color: @color-pomegranate; }
+.color-sunglo { background-color: @color-sunglo; }
+.color-thunderbird { background-color: @color-thunderbird; }
+.color-oldbrick { background-color: @color-oldbrick; }
+.color-flamingo { background-color: @color-flamingo; }
+.color-valencia { background-color: @color-valencia; }
+.color-tallpoppy { background-color: @color-tallpoppy; }
+.color-monza { background-color: @color-monza; }
+.color-cinnabar { background-color: @color-cinnabar; }
+.color-tahitigold { background-color: @color-tahitigold; }
+.color-casablanca { background-color: @color-casablanca; }
+.color-crusta { background-color: @color-crusta; }
+.color-burntorange { background-color: @color-burntorange; }
+.color-buttercup { background-color: @color-buttercup; }
+.color-ecstasy { background-color: @color-ecstasy; }
+.color-jaffa { background-color: @color-jaffa; }
+.color-zest { background-color: @color-zest; }
+.color-firebush { background-color: @color-firebush; }
+.color-downy { background-color: @color-downy; }
+.color-mountainmeadowlight { background-color: @color-mountainmeadowlight; }
+.color-lightgreensea { background-color: @color-lightgreensea; }
+.color-turquoise { background-color: @color-turquoise; }
+.color-observatory { background-color: @color-observatory; }
+.color-shamrock { background-color: @color-shamrock; }
+.color-mountainmeadow { background-color: @color-mountainmeadow; }
+.color-emeral { background-color: @color-emeral; }
+.color-greenhaze { background-color: @color-greenhaze; }
+.color-junglegreen { background-color: @color-junglegreen; }
+.color-freespeechaquamarine { background-color: @color-freespeechaquamarine; }
+.color-jade { background-color: @color-jade; }
+.color-salem { background-color: @color-salem; }
+.color-eucalyptus { background-color: @color-eucalyptus; }
+.color-pictonblue { background-color: @color-pictonblue; }
+.color-shakespeare { background-color: @color-shakespeare; }
+.color-curiousblue { background-color: @color-curiousblue; }
+.color-madison { background-color: @color-madison; }
+.color-jordyblue { background-color: @color-jordyblue; }
+.color-dodgerblue { background-color: @color-dodgerblue; }
+.color-ming { background-color: @color-ming; }
+.color-ebonyclay { background-color: @color-ebonyclay; }
+.color-malibu { background-color: @color-malibu; }
+.color-chambray { background-color: @color-chambray; }
+.color-pickledbluewood { background-color: @color-pickledbluewood; }
+.color-hoki { background-color: @color-hoki; }
+.color-jellybean { background-color: @color-jellybean; }
+.color-jacksonpurple { background-color: @color-jacksonpurple; }
+.color-steelblue { background-color: @color-steelblue; }
+.color-fountainblue { background-color: @color-fountainblue; }
 
 .article-color(@name) {
   background-color: @@name;
