--- a/styles/feedback.less
+++ b/styles/feedback.less
@@ -53,8 +53,8 @@
 }
 
 .aside-feedback-open #aside-feedback-buttons {
-  .btn-back { display: none; }
-  .btn-feedback { width: 100%; }
+  .btn-back { width: 100%; }
+  .btn-feedback { display: none; }
 
   .btn-feedback .fa::before {
     content: '\f057';
