--- a/templates/home.hbs
+++ b/templates/home.hbs
@@ -7,7 +7,7 @@
       {{{title}}}
       <div class="description">
         {{{descriptions.long}}}
-        <button type="button" class="btn" data-article-id="{{reference.id}}"{{#if colors}} style="background-color:{{colors.lighten}};border-color:{{colors.primary}};"{{/if}}>Show</button>
+        <button type="button" class="btn" data-article-id="{{reference.id}}"{{#if colors}} style="background-color:{{colors.lighten}};border-color:{{colors.primary}};"{{/if}}>Read more...</button>
       </div>
     </div>
   </div>
