--- a/templates/place.hbs
+++ b/templates/place.hbs
@@ -1,7 +1,7 @@
 <div class="illustration" style="background-image:url('{{illustration.main.url}}')"></div>
 
 <div class="place">
-  <div class="content">
+  <div class="place-content">
     {{{title}}}
     {{{content}}}
   </div>
