--- a/styles/colors.less
+++ b/styles/colors.less
@@ -119,5 +119,11 @@
   .summary {
     background-color: @@name;
     color: #ffffff;
+
+    .btn {
+      color: #ffffff;
+      background-color: spin(@@name, 25);
+      border-color: darken(spin(@@name, 25), 15%);
+    }
   }
 }
