--- a/styles/feedback.less
+++ b/styles/feedback.less
@@ -12,6 +12,7 @@
   cursor: pointer;
   white-space: nowrap;
   text-align: center;
+  font-weight: 400;
 
   .btn-back, .btn-feedback {
     padding: 20px;
