--- a/styles/map-top.less
+++ b/styles/map-top.less
@@ -36,6 +36,7 @@
     bottom: 0;
     // width: @aside-top-arrow-size;
     line-height: @aside-top-arrow-size;
+    font-weight: 400;
     padding: @aside-top-arrow-padding-vertical @aside-top-arrow-padding-horizontal;
     //margin-left: (@aside-top-arrow-size / 2);
     color: #ffffff;
