--- a/templates/home.hbs
+++ b/templates/home.hbs
@@ -6,7 +6,7 @@
     <div class="summary" style="{{summaryStyle}}">
       {{{title}}}
       <div class="description">
-        {{{descriptions.long}}}
+        {{{description}}}
         <button type="button" class="btn" data-article-id="{{reference.id}}"{{#if colors}} style="background-color:{{colors.lighten}};border-color:{{colors.primary}};"{{/if}}>Read more...</button>
       </div>
     </div>
