--- a/styles/global.less
+++ b/styles/global.less
@@ -18,6 +18,14 @@ html, body {
 
 body {
   font-family: 'Lato', 'sans-serif';
+  font-size: 20px;
+  font-weight: 300;
+}
+
+@media (min-width: @screen-md-min) {
+  .body {
+    font-size: 22px;
+  }
 }
 
 #content {
