Switch lightbox impl. Correct Disqus using hashbang

--- a/styles/app.less
+++ b/styles/app.less
@@ -2,7 +2,7 @@
 @import (reference) "bootstrap/less/variables";
 @import (reference) "bootstrap/less/mixins";
 @import (reference) "mixins";
-@import (inline) "lightbox2/css/lightbox.css";
+@import (inline) "blueimp-gallery/css/blueimp-gallery.min.css";
 
 @import "font-awesome/less/font-awesome";
 @fa-font-path: "./fonts";
